--- a/index.html
+++ b/index.html
@@ -6,4 +6,19 @@
 </p>
 <p>(e^iπ)+1=0</p>
 <button type="button" class="button" onclick="window.location.href='https://neal.fun/'">This button will take you somewhere fun</button>
-<h3 class="decorated header">ooh look<br> its a few fancy lines of text<br> so cool</h3>
+<h3 class="decorated">ooh look<br> its a few fancy lines of text<br> so cool</h3>
+<form name="form">
+	<label for="name">What's your name?</label>
+	<input type="text" id="name" name="name"><br>
+	<label for="pets">What pet do you have?</label>
+	<select id="pets" name="pets">
+		<option value="dog">Dog</option>
+		<option value="cat">Cat</option>
+		<option value="parrot">Parrot</option>
+		<option value="hamster">Hamster</option>
+	</select><br>
+	<label for="thoughts">What's on your mind?</label>
+	<textarea name="thoughts" rows="10" cols="40"></textarea>
+</form>
+<button name="button" type="button" id="petthing">show pet image</button>
+<img src="" alt="pet image here" id="image">
