--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<head>
+	<link rel="stylesheet" href="style.css">
+</head>
 <h1>Hello</h1>
 <p>This engine is super cool
 	<a href='https://google.com'>go to google</a></p>
